# lurebench

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATA.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/full/multilingual/: eval.jsonl  llm_robust_deepseek.json  llm_scores_deepseek.json  pilot.jsonl
docs/: DATASHEET.md  SHARD_SPEC.md  adding-a-detector.md  adversarial-robustness.md  cross_generator_findings.md  leaderboard.md  llm-detector.md  multilingual.md  provenance_results.md  sources.md  taxonomy.md
docs/shard_manifests/: core.json  phishtext.json
lurebench/: __init__.py  cli.py  corpus.py  crossgen.py  data.py  harness.py  hub.py  leaderboard.py  manifest.py  metrics.py  multilingual.py  robustness.py  schema.py  splits.py  stix.py  taxonomy.py
lurebench/attacks/: __init__.py  base.py  llm.py  perturb.py
lurebench/detectors/: __init__.py  base.py  binoculars.py  heuristic.py  llama_guard.py  llm.py  moderation.py  tfidf.py
lurebench/generate/: __init__.py  anthropic_generator.py  base.py  openai_compat.py  pipeline.py  template.py
lurebench/ingest/: __init__.py  base.py  ephishgen.py  generic.py
scripts/: build_multilingual_pilot.py  build_paired_provenance.py  build_phishtext_shard.py  eval_cross_generator.py  eval_paired_provenance.py  make_charts.py  make_llm_comparison_chart.py  make_llm_robustness_chart.py  make_llm_video.py  make_multilingual_chart.py  make_multilingual_video.py  make_story_video.py  make_story_video_dark.py  pilot_paired_provenance.py  score_llm_multilingual.py  score_llm_robustness.py
tests/: test_attacks.py  test_corpus.py  test_crossgen.py  test_generate.py  test_harness.py  test_ingest.py  test_leaderboard.py  test_llm_detector.py  test_metrics.py  test_multilingual.py  test_robustness.py  test_splits.py  test_stix.py  test_taxonomy.py  test_tfidf.py
