[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lurebench"
version = "0.3.0"
description = "A maintained benchmark and evaluation harness for detecting AI-generated fraud lures (phishing, BEC, romance / pig-butchering)."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "Imran Ahamed" }]
keywords = [
    "fraud-detection",
    "phishing",
    "llm",
    "benchmark",
    "ai-security",
    "machine-generated-text",
    "social-engineering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = []   # the core harness and heuristic baseline run dependency-free

[project.optional-dependencies]
binoculars = ["torch>=2.0", "transformers>=4.38"]
llamaguard = ["torch>=2.0", "transformers>=4.38", "accelerate>=0.26"]
openai = ["openai>=1.0"]
hub = ["huggingface_hub>=0.23"]
generate = ["anthropic>=0.40"]
train = ["scikit-learn>=1.3", "joblib>=1.3"]
dev = ["pytest>=7", "ruff>=0.4"]
all = ["torch>=2.0", "transformers>=4.38", "accelerate>=0.26", "openai>=1.0", "huggingface_hub>=0.23", "anthropic>=0.40", "scikit-learn>=1.3", "joblib>=1.3"]

[project.scripts]
lurebench = "lurebench.cli:main"

[project.urls]
Homepage = "https://github.com/immu4989/lurebench"
Repository = "https://github.com/immu4989/lurebench"
Issues = "https://github.com/immu4989/lurebench/issues"

[tool.hatch.build.targets.wheel]
packages = ["lurebench"]

[tool.ruff]
line-length = 100
target-version = "py39"
